[package]
name = "whatsapp-backup"
version = "0.1.0"
edition = "2021"
description = "Automated encrypted backup of WhatsApp Desktop chats"
authors = ["Hasan"]

[[bin]]
name = "whatsapp-backup"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"

# Archive
tar = "0.4"
flate2 = "1"

# Paths
dirs = "5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
